RESOLVED FIXED 89221
CSSOM wrappers are not built for rules in the per-document and page group user stylesheets
https://bugs.webkit.org/show_bug.cgi?id=89221
Summary CSSOM wrappers are not built for rules in the per-document and page group use...
Alexander Pavlov (apavlov)
Reported 2012-06-15 09:20:35 PDT
Attachments
Patch (12.32 KB, patch)
2012-06-18 04:59 PDT, Alexander Pavlov (apavlov)
no flags
Archive of layout-test-results from ec2-cr-linux-04 (659.30 KB, application/zip)
2012-06-18 05:31 PDT, WebKit Review Bot
no flags
Patch (7.84 KB, patch)
2012-06-18 05:53 PDT, Alexander Pavlov (apavlov)
koivisto: review+
Alexey Proskuryakov
Comment 1 2012-06-17 09:38:09 PDT
Alexander, could you please provide complete information about the issue here? Asking everyone looking at a bug to click through to an external site to get information is plain offensive.
Alexander Pavlov (apavlov)
Comment 2 2012-06-17 14:16:31 PDT
(In reply to comment #1) > Alexander, could you please provide complete information about the issue here? Asking everyone looking at a bug to click through to an external site to get information is plain offensive. Yes, sorry. Web Inspector does not display Chromium extension-injected CSS rules in the Styles pane. I believe non-Chromium users will rarely encounter this issue.
Alexander Pavlov (apavlov)
Comment 3 2012-06-18 04:59:51 PDT
Gustavo Noronha (kov)
Comment 4 2012-06-18 05:10:24 PDT
Build Bot
Comment 5 2012-06-18 05:19:20 PDT
Early Warning System Bot
Comment 6 2012-06-18 05:24:41 PDT
Early Warning System Bot
Comment 7 2012-06-18 05:27:40 PDT
WebKit Review Bot
Comment 8 2012-06-18 05:31:13 PDT
Comment on attachment 148084 [details] Patch Attachment 148084 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12971620 New failing tests: inspector/styles/inject-stylesheet.html
WebKit Review Bot
Comment 9 2012-06-18 05:31:18 PDT
Created attachment 148086 [details] Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Gyuyoung Kim
Comment 10 2012-06-18 05:36:06 PDT
Build Bot
Comment 11 2012-06-18 05:44:30 PDT
Alexander Pavlov (apavlov)
Comment 12 2012-06-18 05:53:54 PDT
Alexander Pavlov (apavlov)
Comment 13 2012-06-18 09:04:27 PDT
Csaba Osztrogonác
Comment 14 2012-06-18 09:52:12 PDT
(In reply to comment #13) > Committed r120600: <http://trac.webkit.org/changeset/120600> Something is wrong with the new test, because it fails on Qt and Apple Lion: -CONSOLE MESSAGE: line 9: iframe loaded Tests that injected user stylesheets are reflected in the Styles pane. +This test requires window.testRunner, exiting. Could you check it, please?
Csaba Osztrogonác
Comment 15 2012-06-18 11:28:16 PDT
New bug report filed on this failure, because reopening closed bugs and discussion in closed bugs isn't allowed: https://bugs.webkit.org/show_bug.cgi?id=89364
Note You need to log in before you can comment on or make changes to this bug.