CSSOM wrappers are not built for rules in the per-document and page group user stylesheets https://bugs.webkit.org/show_bug.cgi?id=89221

Reviewed by Antti Koivisto.

Source/WebCore:

The issue manifested itself by not displaying injected page group stylesheet data in the Styles pane.

Test: inspector/styles/inject-stylesheet.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):

LayoutTests:

* inspector/styles/inject-stylesheet-expected.txt: Added.
* inspector/styles/inject-stylesheet.html: Added.
* inspector/styles/resources/inject-stylesheet-iframe-data.html: Added.

Canonical link: https://commits.webkit.org/107212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120600 268f45cc-cd09-0410-ab3c-d52691b4dbfc